# python-single-perceptron

./: README.md  perceptron.py  pyproject.toml  requirements.txt
data/: train_set.csv
perceptron/: __init__.py  __module__.py  _perceptron.py
