[tool.poetry]
name = "perceptron"
version = "0.1.0"
description = ""
authors = ["Krystian Postek <krystian@postek.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.0.0"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
